# 241-327_Lazareva

lab1/: .gitignore  docker-compose.yaml  import_data.py  pyproject.toml  test_api.http
lab1/backend/: Dockerfile  requirements.txt
lab1/backend/data/: f1_pitstops_2018_2024.csv
lab1/backend/lab1/: settings.py  urls.py
lab1/backend/mainapp/migrations/: 0001_initial.py
lab1/docker/: docker-compose.yaml
lab1/lab1/: settings.py
lab1/mainapp/: models.py  serializers.py  views.py
lab1/mainapp/migrations/: 0002_remove_raceresult_is_completed_and_more.py
lab1/nginx/: Dockerfile  server.crt  server.key
lab1/nginx/templates/: default.conf.template
lab3/: httpclient.cpp  httpclient.h  lab3.pro  main.cpp  mainwindow.cpp  mainwindow.h  raceresult.cpp  raceresult.h
