[project]
name = "lab1"
version = "0.1.0"
description = "A simple Python project for lab 1 - system of tracking Formula 1 statistics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.14",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "faker>=40.15.0",
    "gunicorn>=26.0.0",
    "psycopg[binary,pool]>=3.3.4",
]
